update publish script

--- a/build.gradle
+++ b/build.gradle
@@ -25,12 +25,15 @@ gradlePlugin {
 
 publishing {
 	repositories {
-		if (project.properties.containsKey('gitLabDeployToken')) {
+		def GITLAB_PRIVATE_ACCESS_TOKEN = System.getenv("GITLAB_PRIVATE_ACCESS_TOKEN")
+		if (GITLAB_PRIVATE_ACCESS_TOKEN == null) {
+			throw new GradleException("GITLAB_PRIVATE_ACCESS_TOKEN not defined")
+		} else {
 			maven {
 				url = "https://gitlab.com/api/v4/projects/37712942/packages/maven"
 				credentials(HttpHeaderCredentials) {
-					name = 'Deploy-Token'
-					value = gitLabDeployToken
+					name = 'Private-Token'
+					value = GITLAB_PRIVATE_ACCESS_TOKEN
 				}
 				authentication {
 					header(HttpHeaderAuthentication)
