make compatible with java 8

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ gradlePlugin {
 	}
 }
 
+// Groovy 4 is compatible with Java 8
+java {
+	targetCompatibility = 8
+}
+
 publishing {
 	repositories {
 		def GITLAB_PRIVATE_ACCESS_TOKEN = System.getenv("GITLAB_PRIVATE_ACCESS_TOKEN")
